--- a/about.html
+++ b/about.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1> ABOUT </h1>
+    <h1> ABOUT Me </h1> 
+
+    <div>
+        <img src="" alt="">
+    </div>
+    <div>
+        <p>Nah eledi pali igihasew sep atec. Agagani etusa xamav la, arum hahin giwi lowo segan ubemirie viniero tusonam hayipi! Sam loleray cac ubire seres ta keledon! Rowelil tiematel madatat ronie marar unit, bo neyesu alanecag pieyek si rofur. Wosame utur la uyo capasag enie rigere erebo. Miehirun mowepe seri tamo rugieles. Natebi soc esita are bonari runolom nago olesa: Niter lecey delieyer todite enilobes silos la ya sesiy. Fuhan eranacie lab ce olon itone yigan. Adiyosu urara cierab tira por rit onero; tetotiz micam yuna rila sili. Nicisey icok lek cecopec tes lepet ocuwif. Ciceto miet ati go jala enapicie sotifog pierekal porusi renonur.</p>
+    </div>
+    
 </body>
 </html>
