--- a/index.html
+++ b/index.html
@@ -4,8 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet"  href="style/index.css">
+
 </head>
 <body>
-    
+<header>
+    <h1>Aleshya Barbour</h1>
+</header>
+<nav>
+    <button class="button" onclick="index.html">Home</button>   
+    <button class="button" onclick="about.html">About</button>  
+    <button class="button" onclick="contact.html">Contact</button> 
+    <button class="button" onclick="projects" >Projects</button>
+</nav>    
+
+    <h2>Introducing website</h2>
+<div class="main">
+    <p>Darn dove impotently rethought supply overslept on gosh in ouch as firefly therefore one snickered grasshopper heatedly some before acrimoniously other or firefly as fanatic as as precise jeepers fabulously and intensely as absolutely this goldfish until alas well out.</p>
+</div>
+<div class="img">
+    <img src="https://images.unsplash.com/photo-1581090698603-a8a626ffdc14?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" alt="project">
+</div>
+<div class="container">
+    <div class="item">project1</div>
+    <div class="item">project2</div>
+    <div class="item">project3</div>
+    <div class="item">project4</div>
+    <div class="text"> Text text text <br> Text Text<br> </div>
+</div>
+
+<footer>
+    <button class="too">Contact Me</button>
+</footer>
+
+
 </body>
 </html>
