--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=    <h1> ABOUT </h1>, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <h1> CONTACT </h1>
+    <div class="imgtxtimg"> 
+        <img src="" alt=""> 
+        email
+        Phone number 
+        <img src="">
+    </div>
 </body>
 </html>
